Lagt til DB og fiks med docker