@@ -1,95 +1,85 @@
 package no.hvl.pollapp.service;
 
-import no.hvl.pollapp.domain.*;
-import org.springframework.stereotype.Component;
+import no.hvl.pollapp.domain.Poll;
+import no.hvl.pollapp.domain.User;
+import no.hvl.pollapp.domain.Vote;
+import no.hvl.pollapp.domain.VoteOption;
+import no.hvl.pollapp.repository.PollRepository;
+import no.hvl.pollapp.repository.UserRepository;
+import no.hvl.pollapp.repository.VoteOptionRepository;
+import no.hvl.pollapp.repository.VoteRepository;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.List;
 
-@Component
+@Service
 public class PollManager {
-    private final Map<String, User> users = new HashMap<>();
-    private final Map<Long, Poll> polls = new HashMap<>();
-    private final Map<Long, Vote> votes = new HashMap<>();
-    private long nextId = 1L;
 
-    public User addUser(User user) {
-        users.put(user.getUsername(), user);
-        return user;
+    private final PollRepository pollRepository;
+    private final VoteRepository voteRepository;
+    private final UserRepository userRepository;
+    private final VoteOptionRepository voteOptionRepository;
+
+    public PollManager(PollRepository pollRepository,
+                       VoteRepository voteRepository,
+                       UserRepository userRepository,
+                       VoteOptionRepository voteOptionRepository) {
+        this.pollRepository = pollRepository;
+        this.voteRepository = voteRepository;
+        this.userRepository = userRepository;
+        this.voteOptionRepository = voteOptionRepository;
     }
 
-    public User getUser(String username) {
-        return users.get(username);
-    }
-
-    public List<User> getAllUsers() {
-        return new ArrayList<>(users.values());
-    }
-
-    public void deleteUser(String username) {
-        users.remove(username);
-    }
-
-    public Poll addPoll(Poll poll) {
-        poll.setId(nextId++);
-        if (poll.getVoteOptions() != null) {
-            for (VoteOption option : poll.getVoteOptions()) {
-                option.setId(nextId++);
-                option.setPollId(poll.getId());
-            }
+    @Transactional
+    public Poll createPoll(Poll poll) {
+        // Connect child options -> parent poll before saving
+        if (poll.getOptions() != null) {
+            poll.getOptions().forEach(opt -> opt.setPoll(poll));
         }
-        polls.put(poll.getId(), poll);
-        return poll;
-    }
-
-    public Poll getPoll(Long id) {
-        return polls.get(id);
+        return pollRepository.save(poll);
     }
 
     public List<Poll> getAllPolls() {
-        return new ArrayList<>(polls.values());
+        return pollRepository.findAll();
+    }
+
+    public Poll getPollOrThrow(Long id) {
+        return pollRepository.findById(id)
+                .orElseThrow(() -> new IllegalArgumentException("Poll not found: " + id));
     }
 
     public void deletePoll(Long id) {
-        votes.values().removeIf(vote -> vote.getPollId().equals(id));
-        polls.remove(id);
+        pollRepository.deleteById(id);
     }
 
-    public Vote addOrUpdateVote(Vote vote) {
-        Vote existing = findVoteByUserAndPoll(vote.getUsername(), vote.getPollId());
-        if (existing != null) {
-            existing.setVoteOptionId(vote.getVoteOptionId());
-            return existing;
+    @Transactional
+    public Vote registerVote(Long pollId, Long optionId, String username) {
+        // ensure poll exists
+        Poll poll = getPollOrThrow(pollId);
+
+        // ensure option belongs to that poll
+        VoteOption option = voteOptionRepository.findById(optionId)
+                .orElseThrow(() -> new IllegalArgumentException("Vote option not found: " + optionId));
+        if (option.getPoll() == null || !option.getPoll().getId().equals(poll.getId())) {
+            throw new IllegalArgumentException("Option " + optionId + " does not belong to poll " + pollId);
         }
-        vote.setId(nextId++);
-        votes.put(vote.getId(), vote);
-        return vote;
-    }
 
-    public Vote findVoteByUserAndPoll(String username, Long pollId) {
-        for (Vote v : votes.values()) {
-            if (v.getPollId().equals(pollId) && v.getUsername().equals(username)) {
-                return v;
-            }
-        }
-        return null;
-    }
+        // find or create user
+        User user = userRepository.findByUsername(username)
+                .orElseGet(() -> userRepository.save(new User(username)));
 
-    public Vote getVote(Long id) {
-        return votes.get(id);
-    }
-
-    public List<Vote> getAllVotes() {
-        return new ArrayList<>(votes.values());
+        // Save vote
+        Vote vote = new Vote(user, option);
+        return voteRepository.save(vote);
     }
 
     public List<Vote> getVotesForPoll(Long pollId) {
-        return votes.values().stream()
-                .filter(vote -> vote.getPollId().equals(pollId))
-                .collect(Collectors.toList());
-    }
-
-    public void deleteVote(Long id) {
-        votes.remove(id);
+        // simple filter; you can add a custom query later for efficiency
+        return voteRepository.findAll().stream()
+                .filter(v -> v.getOption() != null
+                        && v.getOption().getPoll() != null
+                        && pollId.equals(v.getOption().getPoll().getId()))
+                .toList();
     }
 }
